--- a/themes/conventional-commits/static/css/scss/layout/_welcome.scss
+++ b/themes/conventional-commits/static/css/scss/layout/_welcome.scss
@@ -37,6 +37,11 @@
   &__title {
     font-size: 2.6em;
     margin-bottom: $gap-sm;
+
+    @include up-to-mobile {
+      word-break: break-all;
+    }
+
     @include desktop {
       width: 85%;
       font-size: 3.6em;
